# srclone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  base-entities-impl.c  base-entities-impl.h  base-projectiles-impl.c  base-projectiles-impl.h  defs.h  directional-texture.c  directional-texture.h  entity.c  entity.h  font-renderer.c  font-renderer.h  game.c  game.h  input.c  input.h  main.c  mtwister.c  mtwister.h  particle.c  particle.h  player.c  player.h  projectile.c  projectile.h  sfx.c  sfx.h  stars.c  stars.h
